<resources>
    <string name="app_name">QuickDeal</string>
    <string name="text_heading_chat">Global Electronics</string>
    <string name="text_time">2 min ago</string>
    <string name="text_last_msg">Fine sir. We will deliver samples</string>
    <string name="title_search">Search</string>
    <string name="description">Description</string>
    <string name="place_holder_text">Floating action buttons are used for a special type of promoted action. They are distinguished by a circled icon
        floating above the UI and have special motion behaviors related to morphing, launching, and the transferring anchor point.</string>
    <string name="attachment">Attached File</string>
    <string name="file_name">Screenshot999.jpg</string>
    <string name="file_size">220kb</string>
    <string name="title">Title</string>
    <string name="title_chat_detail">Need 1000pcs of electronic fans</string>
    <string name="not_intrested">Not intrested</string>
    <string name="message_now">Message now</string>
    <string name="post_time">Posted 30 mins ago</string>
    <string name="chats">Chats</string>
    <string name="leads">Leads</string>
</resources>
