<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="@dimen/linear_padding"
    android:layout_marginRight="@dimen/linear_padding"
    android:layout_marginTop="@dimen/chat_margin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/text_view_lead_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:gravity="top"
            android:maxLines="1"
            android:text="@string/text_heading_chat"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_lead_name"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="@dimen/margin_4dp"
            android:text="@string/text_last_msg"
            android:textSize="@dimen/text_size_10sp"
            android:textColor="@color/colorGrayLightText"/>

        <TextView
            android:id="@+id/text_view_post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:text="@string/text_time"
            android:textSize="@dimen/text_size_10sp"
            android:textColor="@color/colorGrayLightText"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
