<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="@dimen/linear_padding"
    android:layout_marginRight="@dimen/linear_padding"
    android:layout_marginTop="@dimen/chat_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/linear_padding"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".80"
            android:padding="@dimen/chat_margin">

            <TextView
                android:id="@+id/text_view_shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:ellipsize="end"
                android:gravity="top"
                android:maxLines="1"
                android:text="@string/text_heading_chat"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_shop_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_num_of_unread_msg"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:background="@drawable/magnitude_circle"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_num_msg" />

            <TextView
                android:id="@+id/text_view_last_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_shop_name"
                android:ellipsize="end"
                android:maxLines="1"

                android:paddingTop="@dimen/chat_margin"
                android:text="@string/text_last_msg"
                android:textSize="@dimen/text_size_last_msg" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_weight=".20"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingRight="2dp"
            android:paddingTop="4dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/text_view_time"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight=".5"
                android:text="@string/text_time"
                android:textSize="8sp" />

            <!-- TODO find meeting material icon -->
            <ImageView
                android:id="@+id/image_deal"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="right"
                android:layout_weight="0.5"
                android:src="@drawable/ic_group_black_24dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
